--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.othman.markit">
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,11 +22,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".firstscreens.LogActivity" />
+        <activity android:name=".firstscreens.SignUpActivity" />
         <activity android:name=".firstscreens.FirstActivity" />
         <activity android:name=".firstscreens.appscreens.MainActivity" />
         <activity android:name=".firstscreens.appscreens.GroupNameActivity" />
-        <activity android:name=".firstscreens.appscreens.ShowAllTasksActivity"></activity>
+        <activity android:name=".firstscreens.appscreens.ShowAllTasksActivity" />
     </application>
 
 </manifest>
