--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".firstscreens.appscreens.ItemAmount"></activity>
+        <activity android:name=".firstscreens.appscreens.ItemsActivity" />
+        <activity android:name=".firstscreens.groupActivity.TheItemGroupActivity" />
         <activity
             android:name=".firstscreens.MainActivity.MainActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".firstscreens.FirstActivities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
